apps/base/bookorbit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookorbit
  labels:
    app.kubernetes.io/name: bookorbit
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
