apps/base/bookorbit/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookorbit
  labels:
    app.kubernetes.io/name: bookorbit
    gateway.excloo.dev/private-access: "true"
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookorbit
  namespace: bookorbit
  labels:
    app.kubernetes.io/name: bookorbit
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bookorbit
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bookorbit-database
  namespace: bookorbit
  labels:
    app.kubernetes.io/name: bookorbit
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backup
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: bookorbit
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      cnpg.io/cluster: bookorbit-database
  policyTypes:
    - Ingress
